--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -5,15 +5,26 @@
   background-color: #f9f9fa;
   padding: 20px 40px;
   box-sizing: border-box;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  border-top: var(--main-border);
 }
 .nav__list {
   display: flex;
   justify-content: space-between;
 }
 .nav__link {
-  color: rgb(32, 32, 46);
+  color: rgb(68, 26, 9);
   position: relative;
+}
+@keyframes notificationAnimation {
+  0% {
+    transform: none;
+  }
+  50% {
+    transform: translateY(-5px) rotateY(180deg);
+  }
+  100% {
+    transform: none;
+  }
 }
 .nav__notification {
   background-color: rgb(197, 56, 56);
@@ -28,6 +39,7 @@
   position: absolute;
   left: 20px;
   bottom: 15px;
+  animation: notificationAnimation 2s ease-in-out infinite;
 }
 .nav__dot {
   background-color: rgb(197, 56, 56);
@@ -36,4 +48,38 @@
   border-radius: 1.5px;
   position: absolute;
   right: 0.2px;
+}
+.nav__dot--top {
+  background-color: rgb(197, 56, 56);
+  width: 3px;
+  height: 3px;
+  border-radius: 1.5px;
+  position: absolute;
+  right: -4px;
+  top: -3px;
+}
+
+@keyframes appearBtnAnimation {
+  from {
+    opacity: 0;
+  }
+  to {
+    transform: none;
+    opacity: 1;
+  }
+}
+.nav__btn {
+  transform: translateY(50px);
+  opacity: 0;
+  animation: appearBtnAnimation 0.5s ease-in-out forwards;
+}
+.nav__btn:nth-child(2) {
+  animation-delay: 0.5s;
+}
+
+.nav__btn:nth-child(3) {
+  animation-delay: 1s;
+}
+.nav__btn:last-child {
+  animation-delay: 1.5s;
 }
