--- a/css/components/screen-head.css
+++ b/css/components/screen-head.css
@@ -12,3 +12,19 @@
 .screen-header__icons span {
   margin-left: 14px;
 }
+.screen-header__icons {
+  position: relative;
+}
+
+@keyframes rotateCog {
+  from {
+    transform: none;
+  }
+  to {
+    transform: rotateZ(360deg);
+  }
+}
+
+.screen-header__icons .fa-cog:hover {
+  animation: rotateCog 1s linear infinite;
+}
