--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap");
 @import "reset.css";
+@import "variables.css";
 
 /* Components */
 @import "components/status-bar.css";
@@ -7,15 +8,22 @@
 @import "components/screen-head.css";
 @import "components/user-component.css";
 @import "components/badge.css";
+@import "components/icon-row.css";
+@import "components/alt-screen-header.css";
+@import "components/no-mobile.css";
 
 /* Screens */
 @import "screens/login.css";
-@import "variables.css";
 @import "screens/friends.css";
+@import "screens/find.css";
+@import "screens/more.css";
+@import "screens/setting.css";
+@import "screens/chatting.css";
+
 body {
   font-family: "Open Sans", sans-serif;
   height: 1000vh;
-  color: rgb(32, 32, 46);
+  color: rgb(68, 26, 9);
 }
 .main-screen {
   padding: 0px var(--horizontal-space);
