--- a/css/variables.css
+++ b/css/variables.css
@@ -1,4 +1,7 @@
 :root {
   --yellow: #fae100;
   --horizontal-space: 25px;
+  --main-border: 1px solid rgba(0, 0, 0, 0.1);
+  --main-color: rgb(68, 26, 9);
+  --main-grey: rgba(0, 0, 0, 0.3);
 }
